@@ -38,6 +38,9 @@ function thewire_tools_init() {
 	elgg_extend_view("core/river/filter", "thewire_tools/activity_post", 400);
 	elgg_extend_view("page/layouts/elements/filter", "thewire_tools/group_activity", 400);
 	
+	// register ajax view
+	elgg_register_ajax_view("thewire_tools/reshare");
+	
 	// add some extra widgets (for Widget Manager only)
 	elgg_register_widget_type("index_thewire", elgg_echo("widgets:index_thewire:title"), elgg_echo("widgets:index_thewire:description"), array("index"), true);
 	elgg_register_widget_type("thewire_post", elgg_echo("widgets:thewire_post:title"), elgg_echo("widgets:thewire_post:description"), array("index", "dashboard"), false);
